Fixed some issues related to z-index in CSS

--- a/src/Components/Sidedrawer/Sidedrawer.css
+++ b/src/Components/Sidedrawer/Sidedrawer.css
@@ -10,7 +10,7 @@
     box-shadow: 5px 0 5px rgba(0, 0, 0, 0.541) ;
     top: 0  ;
     left: 0;
-    z-index: 2;
+    z-index: 4;
     transform: translateX(-100%);
     transition: transform 0.3s ease-out;
 }
