--- a/src/Components/SignUpComponent/SignUp.css
+++ b/src/Components/SignUpComponent/SignUp.css
@@ -1,27 +1,20 @@
 .signup-main {
     display: flex;
     position: absolute;
-    height: 100%;
     width: 100%;
-    top: 50px;
-   
-    
-    
-    
-    
-}
-
-.signup-left {   
-    width: 50%;
     height: 100%;
-   
-    
+    z-index: 1;
+
 }
 
 .signup-right {
-    padding-top: 5rem;
+    margin-top: 50px;
     width: 50%;
-    height: 100%;
-    
-    
+    background-color:rgb(175, 175, 175);
+}
+
+.signup-left {
+    margin-top: 50px;
+    width: 50%;
+    background-color: dodgerblue
 }
